--- a/4._Public_API/public/index/index.html
+++ b/4._Public_API/public/index/index.html
@@ -39,9 +39,9 @@
 
 <div class="jumbotron text-center">
   <h1>NodeJS</h1> 
-  <p>Documentation</p> 
+  <p id="activity">What should i be doing right now??</p> 
   <form>
-    <div class="input-group">
+    <div class="input-group" id="catfacts">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
       <div class="input-group-btn">
         <button type="button" class="btn btn-danger">Subscribe</button>
@@ -308,6 +308,7 @@
 </footer>
 
 <script src="../index/prism.js"></script>
+<script src="/index/index.js"></script>
 
 </body>
 </html>
