--- a/6._NodeFolio/public/projects/projects.html
+++ b/6._NodeFolio/public/projects/projects.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./frontpage/frontpage.css">
-    <link rel="stylesheet" href="./global/global.css">
+    <link rel="stylesheet" href="../global/global.css">
     <title>Nodefolio</title>
 </head>
 <body>
-    <!-- task create a logo that takes you to the frontpage -->
     <nav>
         <a href="/"><img class="logo-image" src="../assets/logo.png"></a>
         <a href="/cv">CV</a>    
@@ -16,7 +14,7 @@
     </nav>
 
     <main>
-        <h1>Welcome to Nodefolio</h1>
+        <h3>Projects</h3>
     </main>
 
     <footer>
@@ -25,6 +23,6 @@
         <p id="copyright-year"></p>
     </footer>
 
-    <script src="./frontpage/frontpage.js"></script>
+    <script src="../frontpage/frontpage.js"></script>
 </body>
 </html>
